force-app/main/default/objects/AM_Customer_Selected_Cars__c/AM_Customer_Selected_Cars__c.object-meta.xml
<CustomObject>
    <label>AM Customer Selected Car</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>AM Customer Selected Cars ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Customer Selected Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>