force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Brand__c.field-meta.xml
<CustomField>
    <fullName>AM_Brand__c</fullName>
    <formula>TEXT( AM_Vehicle__r.AM_Brand__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Brand</label>
    <type>Text</type>
</CustomField>