force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Customer__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer__c</fullName>
    <label>AM Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AM Customer Selected Cars</relationshipLabel>
    <relationshipName>AM_Customer_Selected_Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>