force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer_Name__c</fullName>
    <formula>AM_Customer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Customer Name</label>
    <type>Text</type>
</CustomField>