force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Fuel_Type__c</fullName>
    <formula>TEXT( AM_Vehicle__r.AM_Fuel_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Fuel Type</label>
    <type>Text</type>
</CustomField>