force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_KMs_Travelled__c.field-meta.xml
<CustomField>
    <fullName>AM_KMs_Travelled__c</fullName>
    <formula>TEXT(   AM_Vehicle__r.AM_Body_Type__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM KMs Travelled</label>
    <type>Text</type>
</CustomField>