force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Make_Year__c.field-meta.xml
<CustomField>
    <fullName>AM_Make_Year__c</fullName>
    <formula>TEXT( AM_Vehicle__r.AM_Make_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Make Year</label>
    <type>Text</type>
</CustomField>