force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Price__c.field-meta.xml
<CustomField>
    <fullName>AM_Price__c</fullName>
    <formula>AM_Vehicle__r.AM_Vehicle_Final_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>