force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Variant__c.field-meta.xml
<CustomField>
    <fullName>AM_Variant__c</fullName>
    <formula>TEXT( AM_Vehicle__r.AM_Battery_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Variant</label>
    <type>Text</type>
</CustomField>