force-app/main/default/objects/AM_Customer_Selected_Cars__c/fields/AM_Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Color__c</fullName>
    <formula>TEXT( AM_Vehicle__r.AM_Vehicle_Color__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Color</label>
    <type>Text</type>
</CustomField>